--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
-body{
+body {
   margin: 0px;
   padding: 0px;
 }
 
 #background {
-  background-image: url('assets/background2.jpg');
+  background-image: url("assets/background2.jpg");
   height: 710px;
   width: 100%;
   background-size: cover;
   /* visibility: hidden; */
-  display:none;
+  display: none;
   margin: 0px;
   padding: 0px;
 }
 
-h1{
+h1 {
   padding: 10px;
   color: rgb(44, 201, 30);
   border: rgb(6, 209, 6);
@@ -22,7 +22,6 @@ h1{
   border-style: groove;
   text-align: center;
   text-shadow: 4px 4px #1b2219;
-
 }
 
 #hero {
@@ -42,14 +41,14 @@ h1{
 }
 
 .missile {
-  background-image: url('assets/missile1.png');
+  background-image: url("assets/missile1.png");
   height: 20px;
   width: 10px;
   position: absolute;
 }
 
 .enemyMissiles {
-  background-image: url('assets/missile2.png');
+  background-image: url("assets/missile2.png");
   height: 20px;
   width: 10px;
   position: absolute;
@@ -60,7 +59,6 @@ h1{
   height: 32px;
   width: 52px;
   position: absolute;
-  
 }
 
 #enemies {
@@ -71,8 +69,7 @@ h1{
 
 dialog {
   width: 130px;
-  height: 130
-  px;
+  height: 130 px;
   /* background-color: blue; */
   opacity: 0.6;
   font-size: 32px;
@@ -100,9 +97,9 @@ dialog {
 
 /* ---------------intro screen stuffs-------------------- */
 #welcome {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: rgb(44, 201, 30);
-  background-image: url('assets/universe3.jpg');
+  background-image: url("assets/universe3.jpg");
   height: 710px;
   width: 100%;
   text-align: center;
@@ -126,7 +123,7 @@ li {
 .welcomeTexts {
   /* position: absolute; */
   font-size: 25px;
-  font-style:bold;
+  font-style: bold;
   text-shadow: 2px 2px #1b2219;
   padding: 10px;
   box-shadow: 1px 1px 5px 0px;
@@ -149,7 +146,6 @@ li {
   background-color: #4caf50;
   color: rgb(225, 247, 221);
 }
-
 
 .content {
   color: #ccc;
@@ -174,4 +170,3 @@ code {
   padding: 1px 5px;
   margin: 0 2px;
 }
-
